@@ -57,6 +57,8 @@ version 2.0-rc0 XX-Feb-2012
 . [FIX] Texture2D: initWithImage renamed with initWithCGImage
 		JPEG: No need to convert JPG to PNG on iOS4 (issue #886 re-fixed)
 		BMP: Images are displayed on iOS4 like on iOS5 (without alpha channel) [iOS5 BUG]
+		'Delete texture' is executed on current thread (not on main thread)
+. [FIX] TextureCache: async invokes callback on cocos2d thread (and not on main thread)
 . [FIX] Types: kCCResolutionStandard renamed to kCCResolutioniPhone
 
 version 2.0-beta2 17-Jan-2012
